--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -9,7 +9,7 @@
             </ul>
             <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span><span
                     class="ae-u-bolder">{{anio}}
-                    Abogados Caballero </span>Profeccionales en defensa legal</p>
+                    Abogados Caballero </span>Profesionales en defensa legal</p>
         </div>
         <div class="ae-grid__item item-lg-4 au-xs-ta-center">
             <a target="_blank" [href]="_services.info.facebook" class="btn btn-download" class="rk-social-btn ">
@@ -21,10 +21,11 @@
         </div>
         <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-right">
             <p class="rk-footer__text rk-footer__contact "> <span class="ae-u-bold">Correo: </span><span
-                    class="ae-u-bolder"> <a href="#0" class="rk-dark-color ">antoni.caballero1993@gmail.com </a></span>
+                    class="ae-u-bolder"> <a href="https:/llero1993@gmail.com </a></span>
             </p>
-            <p class="rk-footer__text rk-footer__by">Los mejores <a
-                    href="https://www.facebook.com/caballeroabogadoslima" class="ae-u-bolder">Profecionales del
+            <p class="rk-footer__text rk-footer__by">Los mejores <a/www.facebook.com/caballeroabogadoslima"
+                        class="rk-dark-color ">antony.caba
+                    href="https://www.facebook.com/caballeroabogadoslima" class="ae-u-bolder">Profesionales del
                     Pais.</a></p>
         </div>
     </div>
