--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -21,12 +21,11 @@
         </div>
         <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-right">
             <p class="rk-footer__text rk-footer__contact "> <span class="ae-u-bold">Correo: </span><span
-                    class="ae-u-bolder"> <a href="https:/llero1993@gmail.com </a></span>
+                    class="ae-u-bolder"> <a href="https://www.facebook.com/caballeroabogadoslima"
+                        class="rk-dark-color ">antony.caballero1993@gmail.com </a></span>
             </p>
-            <p class="rk-footer__text rk-footer__by">Los mejores <a/www.facebook.com/caballeroabogadoslima"
-                        class="rk-dark-color ">antony.caba
-                    href="https://www.facebook.com/caballeroabogadoslima" class="ae-u-bolder">Profesionales del
-                    Pais.</a></p>
+            <p class="rk-footer__text rk-footer__by">Los mejores<a href="https://www.facebook.com/caballeroabogadoslima"
+                    class="ae-u-bolder">Profesionales del Pais.</a></p>
         </div>
     </div>
 </footer>
