--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -12,7 +12,7 @@
         </svg>
     </label>
     <div class="ae-container-fluid rk-topbar">
-        <h1 class="rk-logo"><a routerLink="/home">{{_servicio.info.titulo}}<sup>AC</sup></a></h1>
+        <h1 class="rk-logo"><a routerLink="/home">{{_servicio.info.titulo}}<sup></sup></a></h1>
         <nav class="rk-navigation">
             <ul class="rk-menu">
                 <li routerLinkActive="active" class="active rk-menu__item">
@@ -30,7 +30,7 @@
                         </ul>
                     </nav>-->
                 </li>
-                
+
                 <li routerLinkActive="active" class="rk-menu__item"><a routerLink="blog" class="rk-menu__link">Pages</a>
                     <!--<nav class="rk-menu__sub">
                         <ul class="rk-container">
@@ -47,12 +47,8 @@
                 </li>
             </ul>
             <div class="rk-search">
-                <input type="text"
-                (keyup.enter)="buscarProducto( txtBuscar.value)"
-                placeholder="Buscar...." 
-                id="urku-search" 
-                class="rk-search-field"
-                #txtBuscar>
+                <input type="text" (keyup.enter)="buscarProducto( txtBuscar.value)" placeholder="Buscar...."
+                    id="urku-search" class="rk-search-field" #txtBuscar>
                 <label for="urku-search">
                     <svg>
                         <use xlink:href="assets/img/symbols.svg#icon-search"></use>
