--- a/src/app/pages/item/item.component.html
+++ b/src/app/pages/item/item.component.html
@@ -43,91 +43,23 @@
                 <img src="assets/productos/{{id}}/pic-2.jpg" alt="Urku Portfolio">
             </div>
             <div class="ae-grid__item item-lg-3 item-lg--offset-1 au-lg-ptp-1">
-                <h4 class="ae-u-bolder">EXPERIENCIA Y ESPECIALIDAD</h4>
-                <p>
-                    La base de nuestra práctica profesional es el Derecho Corporativo, teniendo como eje central a las
-                    empresas y hacia
-                    ellas se enfocan nuestras áreas de práctica especializadas: Derecho Mercantil, Fusiones y
-                    Adquisiciones,
-                    Derecho
-                    Bancario y Bursátil, Derecho Fiscal, Derecho Inmobiliario, Derecho Laboral, Competencia Económica,
-                    Derecho Minero, y
-                    Litigio y Resolución de Controversias.
-
+                <h4 class="ae-u-bolder">{{producto.subtitulo2}}</h4>
+                <p>{{producto.desc2}}
 
                 </p>
-                <p class="au-mb-3"> Nuestros servicios legales se sustentan en una sólida experiencia y conocimientos
-                    especializados en
-                    nuestras áreas de
-                    práctica, lo que nos permite brindar a nuestros clientes asesoría jurídica especializada para cada
-                    asunto y operación.</p>
+
                 <p class="ae-u-bolder">Abogados Caballero </p>
             </div>
         </div>
         <div class="ae-grid ae-grid--collapse au-xs-ptp-1 au-xs-pbp-1">
             <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-                <h4 class="ae-u-bolder">RED DE RELACIONES</h4>
-                <p class="ae-eta">
-                    Con la probada experiencia y especialidad de nuestros equipos, complementada con nuestra red de
-                    relaciones con firmas de
-                    abogados líderes en otras regiones del país y en las principales capitales del mundo, proveemos una
-                    cobertura completa
-                    de los servicios legales requeridos por nuestros clientes en el desarrollo de sus negocios tanto en
-                    México como en el
-                    extranjero.
-
-
+                <h4 class="ae-u-bolder">{{producto.subtitulo2}}</h4>
+                <p class="ae-eta">{{producto.desc2}}
                 </p>
-                <p class="ae-eta">
 
-                    Nuestra red de relaciones se enriquece con un conjunto de firmas de abogados y asesores
-                    independientes
-                    que abarca una
-                    diversidad de áreas de especialidad, incluyendo especialistas en Economía, Política y Finanzas, así
-                    como
-                    múltiples
-                    sectores industriales, tales como el inmobiliario, construcción, farmacéutico, aeronáutico,
-                    tecnología y
-                    medios de
-                    comunicación, entre otros.
-
-                    Día a día nos esforzamos por mantener vigente el legado de nuestros fundadores y
-                    fortalecer su espíritu y cultura.</p>
             </div>
         </div>
-        <div class="ae-grid ae-grid--collapse">
-            <div class="ae-grid__item item-lg--auto">
-                <img src="assets/img/project-1.jpg" alt="Urku Portfolio">
-            </div>
-        </div>
-        <div class="ae-grid ae-grid--collapse">
-            <div class="ae-grid__item item-lg-6"><img src="assets/img/inner-3.jpg" alt="Urku Portfolio"></div>
-            <div class="ae-grid__item item-lg-5 item-lg--offset-1 au-lg-ptp-1">
-                <h4 class="ae-u-bolder">TRABAJO EN EQUIPO</h4>
-                <p class="ae-eta">
 
-                    Contamos con un equipo de talentosos abogados graduados de las mejores universidades del país.
-                    Nuestros
-                    socios y
-                    asociados cuentan con estudios de postgrado en reconocidas universidades de Peru, y fueron
-                    entrenados en firmas de abogados líderes en el mundo. Todos los miembros de nuestro equipo reciben
-                    capacitación continua
-                    en nuestras áreas de práctica, lo que les permite mantenerse siempre al día y desarrollar
-                    adecuadamente
-                    sus habilidades.
-
-                </p>
-                <p class="ae-eta">A través de equipos de abogados cuidadosamente seleccionados, brindamos la atención
-                    personalizada requerida para atender
-                    cada asunto u operación que se nos encomienda. Nuestros equipos de trabajo son liderados por un
-                    socio,
-                    quien actúa como
-                    enlace principal con el cliente, coordina y supervisa al equipo, y se responsabiliza de la
-                    prestación de
-                    nuestros
-                    servicios y del logro de los objetivos planteados por el cliente.</p>
-            </div>
-        </div>
         <div class="ae-grid--alt test">
             <div
                 class="ae-grid__item--alt item-sm--auto item-sm--offset-1 item-lg--offset-0 item-sm--end item-sm--bottom">
@@ -170,7 +102,7 @@
                 </div>
             </div>
             <div class="ae-grid__item--alt item-sm--auto item-lg-3 item-lg--offset-1 item-lg--end"><img
-                    src="assets/img/inner-4.jpg" alt="Urku Portfolio"></div>
+                    src="assets/productos/{{id}}/main.jpg" alt="Urku Portfolio"></div>
         </div>
     </div>
     <div class="ae-container-fluid au-pt-4 au-pb-4">
